# spark_k8s

./: .coverage  .cursorrules  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruffignore  CHANGELOG.md  CLAUDE.md  CODE_PATTERNS.md  DEmo-Results.md  LICENSE  MODELS.md  PRODUCT_VISION.md  PROJECT_CONVENTIONS.md  PROTOCOL.md  README.md  ROADMAP.md  RULES_COMMON.md  dataops-cursor-prompt.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  start.sh  test-spark-35-connect-minimal.yaml  test.sh
.beads/: issues.jsonl
.cursor/: worktrees.json
.github/: CODEOWNERS  dependabot.yml  kind-config.yaml
.oneshot/: F019-checkpoint.json  F020-checkpoint.json  F021-checkpoint.json  F022-checkpoint.json  F023-checkpoint.json  F024-checkpoint.json  F026-checkpoint.json  F027-checkpoint.json  F028-checkpoint.json  F06-checkpoint.json  F11-summary.md  f09-checkpoint.json  f10-checkpoint.json  f11-checkpoint.json  f12-checkpoint.json
charts/: spark-platform  spark-standalone  values-common.yaml
dags/: nyc_taxi_ml_full_pipeline.py  nyc_taxi_ml_pipeline.py
docker/: .dockerignore  spark-iceberg.Dockerfile
docs/: PROJECT_MAP.md  SETUP_LOCAL_K8S.md  docker-test-matrix.md  e2e-test-matrix.md  load-test-matrix.md  metrics.json  openshift-security-analysis.md  press-release-v0.1.0-en.md  press-release-v0.1.0-ru.md  press-release-v0.1.0-sdp.md  quick-start.md  security-migration.md  security-test-matrix.md  smoke-test-matrix.md  tech-debt-map.md  test-matrices-index.md
examples/: nyc_taxi_ml_notebook.ipynb  nyc_taxi_ml_pipeline.ipynb
hooks/: commit-msg.sh  post-build.sh  post-oneshot.sh  pre-build.sh  pre-commit.sh  pre-deploy.sh
jupyterhub/: Dockerfile  init-spark-kernel.py  jupyterhub_config.py  requirements-jupyter.txt
local-k8s/: namespace.yaml
notifications/: AUDIT_LOG.md  GITHUB.md  TELEGRAM.md  audit-log.sh  telegram.sh
policies/: spark-values.rego
prompts/: README.md
schema/: index.json  status.schema.json  workstream.schema.json
scripts/: benchmark-spark-versions.sh  build-and-load-image.sh  build-images.sh  cleanup-incorrect-f10.sh  connect_load_test.py  deploy_nyc_taxi_ml.sh  generate_41_scenarios.sh  generate_scenarios.py  gpu-discovery.sh  load-nyc-taxi-data.sh  load-nyt-parquet-data.sh  rightsizing_calculator.py  rightsizing_core.py  run-e2e-airflow.sh  run-e2e-autoscaling.sh  run-e2e-final-matrix.sh  run-e2e-full-matrix.sh  (+37 more)
(+1898 files in other folders)
